Fix CrawlerService code